--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -153,6 +153,7 @@
     "ORDER_ID": "Order ID",
     "PRODUCT_ID": "Product ID",
     "CLEAR_ALL": "Clear all",
+    "PRODUCT": "Product",
     "PRODUCT_NAME": "Product name",
     "CUSTOMER_INFO": "Customer info",
     "FIRSTNAME": "First name",
