Minor visual updates

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -154,7 +154,7 @@
     "PRODUCT_ID": "Produkt-ID",
     "CLEAR_ALL": "Zurücksetzen",
     "PRODUCT": "Produkt",
-    "PRODUCT_NAME": "Produktname",
+    "PRODUCT_NAME": "Produkt",
     "CUSTOMER_INFO": "Kundeninformation",
     "FIRSTNAME": "Vorname",
     "LASTNAME": "Nachname",
