--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -154,7 +154,7 @@
     "PRODUCT_ID": "Product ID",
     "CLEAR_ALL": "Clear all",
     "PRODUCT": "Product",
-    "PRODUCT_NAME": "Product name",
+    "PRODUCT_NAME": "Product",
     "CUSTOMER_INFO": "Customer info",
     "FIRSTNAME": "First name",
     "LASTNAME": "Last name",
